added the main painting features and the zoom

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <h1>Pixel Maker</h1>
   </header>
   <main>
-    <div id = "tool-bar"></div>
+    <div id = "tool-bar">
+
+    </div>
     
     <div id="art-container">
       <div id ="canvas"></div>
     </div>
-    <div id="palette"></div>
+    <div id="palette"><input type="color"/></div>
   </main>
   <footer></footer>
   <script src="script.js"></script>
