--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <main>
     <div id = "tool-bar">
       <h3>Tool Bar</h3>
-      <button id="save">Save Image</button>
-      <button id="load">Load Image</button>
-      <button id="clear">Clear Image</button>
+      <button id="save" class="tools"><img class="icon" src="./Assets/diskette.png" alt="Save"/></button>
+      <button id="load" class="tools"> <img class="icon" src="./Assets/arrow.png" alt="Load"/></button>
+      <button id="clear" class="tools"><img class="icon" src="./Assets/bin.png" alt="Clear"/></button>
       <hr>
       <h3>Drawing Tools</h3>
-      <button id="paint-brush">Paint Brush</button>
-      <button id="erase">Eraser</button>
-      <button id="fill">Fill Tool</button>
+      <button id="paint-brush" class="tools"><img class="icon" src="./Assets/brush.png" alt="Paint"/></button>
+      <button id="erase" class="tools"><img class="icon" src="./Assets/eraser.png" alt="Eraser"/></button>
+      <button id="fill" class="tools"><img class="icon" src="./Assets/paint-bucket.png" alt="Fill"/></button>
     </div>
     
     <div id="art-container">
@@ -37,7 +37,14 @@
       <div id="selected-color"><input type="color" id="color-picker"></div>
     </div>
   </main>
-  <footer></footer>
+  <footer>
+    <a href="https://www.flaticon.com/free-icons/bucket" title="bucket icons">Bucket icons created by Those Icons - Flaticon</a>\
+    <a href="https://www.flaticon.com/free-icons/brush" title="brush icons">Brush icons created by Freepik - Flaticon</a>
+    <a href="https://www.flaticon.com/free-icons/eraser" title="eraser icons">Eraser icons created by Those Icons - Flaticon</a>
+    <a href="https://www.flaticon.com/free-icons/save" title="save icons">Save icons created by Yogi Aprelliyanto - Flaticon</a>
+    <a href="https://www.flaticon.com/free-icons/clear" title="clear icons">Clear icons created by GOFOX - Flaticon</a>
+    <a href="https://www.flaticon.com/free-icons/load" title="load icons">Load icons created by Pohon Maple - Flaticon</a>
+  </footer>
   <script src="script.js"></script>
 </body>
 </html>
