Added some save features

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
   <header>
+    <div class="dropdown">
+      <button id= saved-images class = "dropbtn">Saved Images</button>
+      <div id = images class="dropdown-content">
+
+      </div>
+    </div>
     <h1>Pixel Maker</h1>
   </header>
   <main>
