Added the saved images and making a new pallette size

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 <body>
   <header>
     <div class="dropdown">
-      <button id= saved-images class = "dropbtn">Saved Images</button>
-      <div id = images class="dropdown-content">
-
+      <button id= image-sizes class = "dropbtn">New Image</button>
+      <div id = sizes class="dropdown-content">
+        
       </div>
+    </div>
+    <div class="dropdown">
+      <button id= saved-images class = "dropbtn">Saved Images</button>
+      <div id = images class="dropdown-content"></div>
     </div>
     <h1>Pixel Maker</h1>
   </header>
@@ -20,7 +24,6 @@
     <div id = "tool-bar">
       <h3>Tool Bar</h3>
       <button id="save" class="tools"><img class="icon" src="./Assets/diskette.png" alt="Save"/></button>
-      <button id="load" class="tools"> <img class="icon" src="./Assets/arrow.png" alt="Load"/></button>
       <button id="clear" class="tools"><img class="icon" src="./Assets/bin.png" alt="Clear"/></button>
       <hr>
       <h3>Drawing Tools</h3>
