Changed some small style things

--- a/index.html
+++ b/index.html
@@ -61,4 +61,5 @@
 <a href="https://www.flaticon.com/free-icons/eraser" title="eraser icons">Eraser icons created by Those Icons - Flaticon</a>
 <a href="https://www.flaticon.com/free-icons/save" title="save icons">Save icons created by Yogi Aprelliyanto - Flaticon</a>
 <a href="https://www.flaticon.com/free-icons/clear" title="clear icons">Clear icons created by GOFOX - Flaticon</a>
-<a href="https://www.flaticon.com/free-icons/load" title="load icons">Load icons created by Pohon Maple - Flaticon</a> -->
+<a href="https://www.flaticon.com/free-icons/load" title="load icons">Load icons created by Pohon Maple - Flaticon</a> 
+ https://wallpapercave.com/w/wp5524296-- Uploaded by  gwenizard-->
